# server/controllers/emailTemplates.js
@@ -228,7 +228,7 @@ const SAMPLE_VARS = {
   course_available: {
     studentName: 'Sample Student',
     courseTitle: 'Sample Course',
-    courseUrl: 'https://msp-miu.tech/courses/1?token=sample'
+    courseUrl: 'https://msp-miu.tech/courses/1/learn?token=sample'
   }
 };
 
